--- a/Portfolio.css
+++ b/Portfolio.css
@@ -47,6 +47,11 @@ p{
 }
 
 
+#logo{
+	width:300px;
+	height:300px;
+}
+
 
 .background{
     background-color:lightgray;
@@ -160,12 +165,12 @@ form{
 
 .footer{
     background-color:lightgrey;
-    
+
 }
 
 .subFooter{
     text-align:center;
-    
+
     background-color:cornflowerblue;
 }
 
@@ -173,7 +178,7 @@ form{
     text-align:center;
 }
 .footerRow{
-	
+
 }
 
 .col-md-12 p{
@@ -184,7 +189,17 @@ p .glyphicon{
 	padding-top:0;
 }
 i{
-margin-top:5px;}
+margin-top:10px;
+}
+
+#github{
+
+    width: 40px;
+    height: 50px;
+    position: relative;
+    top: 7px;
+
+}
 
 a{
 
@@ -192,7 +207,7 @@ a{
 }
 
 img#me{
-	
+
 	margin-top:40px;
 }
 
@@ -201,6 +216,23 @@ img#me{
 	line-height:40px
 }
 
-col-md-4 img{
+.col-md-4 img{
 	margin-bottom:20px;
+}
+
+.detail_text{
+	text-align: center;
+}
+.details {
+
+
+	margin-top:60px;
+	padding-top:0px;
+	margin-left:3px;
+  background-color: rgba(211,211,211, 0.5);
+ position:absolute;
+
+  /*background-color: rgba(211, 211, 211, 0.5);*/
+
+
 }
